--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,8 @@ jobs:
         uses: actions/checkout@v2
     - name: Get branch name
       uses: nelonoel/branch-name@v1.0.1
-    - run: echo ${BRANCH_NAME}
+    - name: Print branch name
+      run: echo ${BRANCH_NAME}
     - name: Build and push Docker images
       uses: docker/build-push-action@v2.4.0
       with:
