--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,19 +31,20 @@ jobs:
         image: registry:2
         ports:
           - 5000:5000
-    - name: Checkout
+    steps:
+      - name: Checkout
         uses: actions/checkout@v2
-    - name: Get branch name
-      uses: nelonoel/branch-name@v1.0.1
-    - name: Print branch name
-      run: echo ${BRANCH_NAME}
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v2.4.0
-      with:
-        build-args: |
-          GOLANG_VERSION=1.15.8
-          PLUGIN_VERSION=${BRANCH_NAME}
-        file: docker/Dockerfile.ubuntu20.04
-        push: true
-        tags: localhost:5000/k8s-device-plugin:${BRANCH_NAME}
+      - name: Get branch name
+        uses: nelonoel/branch-name@v1.0.1
+      - name: Print branch name
+        run: echo ${BRANCH_NAME}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2.4.0
+        with:
+          build-args: |
+            GOLANG_VERSION=1.15.8
+            PLUGIN_VERSION=${BRANCH_NAME}
+          file: docker/Dockerfile.ubuntu20.04
+          push: true
+          tags: localhost:5000/k8s-device-plugin:${BRANCH_NAME}
 
