--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,13 +39,12 @@ jobs:
       - name: Print branch name
         run: echo ${BRANCH_NAME}
       - run: env
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v2.4.0
-        with:
-          build-args: |
-            GOLANG_VERSION=1.15.8
-            PLUGIN_VERSION=${BRANCH_NAME}
-          file: docker/Dockerfile.ubuntu20.04
-          push: true
-          tags: localhost:5000/k8s-device-plugin:master
-
+      -
+        name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: docker build and push
+        run: |
+          make REGISTRY="${CI_REGISTRY_IMAGE}" VERSION="${BRANCH_NAME}" all
+          make REGISTRY="${CI_REGISTRY_IMAGE}" VERSION="${BRANCH_NAME}" push
+      
