--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,5 +46,5 @@ jobs:
       - name: docker build and push
         run: |
           make REGISTRY="localhost:5000" VERSION="${BRANCH_NAME}" all
-          make REGISTRY="$localhost:5000" VERSION="${BRANCH_NAME}" push
+          make REGISTRY="localhost:5000" VERSION="${BRANCH_NAME}" push
       
