--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,30 +2,33 @@ name: docker
 
 on:
   push:
-    branches:
-#      - master
     tags:
       - v[0-9]+.[0-9]+.[0-9]+.[0-9]
 
 jobs:
+
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Get branch name
         uses: nelonoel/branch-name@v1.0.1
+      - name: Print branch name
+        run: echo ${BRANCH_NAME}
+      - run: env
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v2.4.0
-        with:
-          build-args: |
-            GOLANG_VERSION=1.15.8
-            PLUGIN_VERSION=${BRANCH_NAME}
-          file: docker/Dockerfile.ubuntu20.04
-          push: true
-          tags: |
-            4pdosc/k8s-device-plugin:${BRANCH_NAME}
-            4pdosc/k8s-device-plugin:latest
+      - name: docker build and push
+        run: |
+          make VERSION="${BRANCH_NAME}" all
+          docker images
+          make VERSION="${BRANCH_NAME}" push
+          make VERSION="${BRANCH_NAME}" push-short
+          make VERSION="${BRANCH_NAME}" push-latest
